# violet-deprecated

./: .clang-format  CMakeLists.txt  LICENSE-MIT  README.md  build.py  conanfile.py
src/: hello.cpp  violet.h
src/violet/: app.cpp  app.h  app_info.h  assert.h  entry_point.cpp  entry_point.h  event.h  event_queue.h  layer.h  layer_stack.h  log.cpp  log.h  logger.cpp  logger.h  surface.h
src/violet/detail/: engine_log.cpp  engine_log.h  event_category.h  events.h  imgui_impl.cpp  imgui_impl.h  imgui_layer.cpp  imgui_layer.h
src/violet/detail/events/: app_events.h  key_events.h  mouse_events.h
src/violet/detail/pch/: pch.h
src/violet/detail/platform/desktop/: desktop_surface.cpp  desktop_surface.h
src/violet/detail/util/: range.h
test_package/: CMakeLists.txt  conanfile.py  package_test.cpp
